# copier-study

./: .pre-commit-config.yaml  404.html  README.md  copier.yaml  index.html  mkdocs.yml  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  gh_deploy.yaml  quality_check.yaml  release.yaml
.pre-commit-hooks/: prepare-commit-msg
docs/: extra.css  index.md
search/: search_index.json
template/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml.jinja  setup.cfg
template/src/{{python_package_import_name}}/: __init__.py.jinja
