[tool.poetry]
name = "copier-study"
version = "0.1.0"
description = ""
authors = ["moguraion <moguraion@gmail.com>"]
readme = "README.md"
packages = [{include = "copier_study"}]

[tool.poetry.dependencies]
python = "^3.10"
copier = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mkdocs-material = "^9.1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
