[tool.poetry]
name = "copier-study"
version = "0.4.0"
description = ""
authors = ["moguraion <moguraion@gmail.com>"]
readme = "README.md"
packages = [{ include = "copier_study" }]

[tool.poetry.dependencies]
python = "^3.10"
copier = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mkdocs-material = "^9.1.16"
python-semantic-release = "^8.0.4"
commitizen = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
